--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^18.2.0",
     "react-datetime-picker": "^4.1.1",
     "react-dom": "^18.2.0",
+    "react-gifted-chat": "^1.0.5",
     "react-hook-form": "^7.39.5",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
