--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^5.2.2",
     "formik": "^2.2.9",
     "react": "^18.2.0",
+    "react-chat-elements": "^12.0.6",
     "react-datetime-picker": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.39.5",
