--- a/package.json
+++ b/package.json
@@ -10,9 +10,8 @@
     "bootstrap": "^5.2.2",
     "formik": "^2.2.9",
     "react": "^18.2.0",
-    "react-datetime-picker": "^4.1.1",
+    "react-chat-elements": "^12.0.6",
     "react-dom": "^18.2.0",
-    "react-gifted-chat": "^1.0.5",
     "react-hook-form": "^7.39.5",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
