--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-hook-form": "^7.39.5",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "twilio-video": "^2.25.0",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
